--- a/nifi-nar-bundles/nifi-aws-bundle/nifi-aws-service-api/pom.xml
+++ b/nifi-nar-bundles/nifi-aws-bundle/nifi-aws-service-api/pom.xml
@@ -47,13 +47,15 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.7</version>
+            <version>2.9.1</version>
+          <scope>provided</scope>
         </dependency>
         <!-- overriding jackson-dataformat-cbor in aws-java-sdk-core -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-cbor</artifactId>
-            <version>2.9.7</version>
+            <version>2.9.1</version>
+          <scope>provided</scope>
         </dependency>
     </dependencies>
 
